Rajout de bootstrap dans les dépendances du projet Modification des link des templates pour l'utiliser

--- a/src/main/resources/templates/connect/facebookConnect.html
+++ b/src/main/resources/templates/connect/facebookConnect.html
@@ -1,6 +1,8 @@
 <html xmlns:th="www.thymeleaf.org">
 <head>
-    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+
     <title>Spring Boot Facebook Application</title>
 </head>
 
