--- a/src/main/resources/templates/connect/facebookConnected.html
+++ b/src/main/resources/templates/connect/facebookConnected.html
@@ -1,7 +1,8 @@
 <html xmlns:th="www.thymeleaf.org">
 <head>
     <!-- Bootstrap core CSS -->
-    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
     <title>Spring Boot Facebook Application</title>
 </head>
 
@@ -10,11 +11,12 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12 text-center">
-            <h1 class="mt-5">Connected successfully!</h1>
+            <h1 class="mt-5 bg-success">Connected successfully!</h1>
             <p class="lead">Welcome to facebook!</p>
 
             <p>You can now browse your own feed <a href="/feed">here</a>.</p>
             <p>You can also see your friend list <a href="/friends">here</a>.</p>
+            <span class="glyphicon glyphicon-cloud" aria-hidden="true"> Enter</span>
         </div>
     </div>
 </div>
