--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -2,7 +2,7 @@
 
 <head>
     <!-- Bootstrap core CSS -->
-    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
     <title>Spring Boot Facebook Application</title>
 </head>
 <body>
