--- a/src/main/resources/templates/connect/facebookConnect.html
+++ b/src/main/resources/templates/connect/facebookConnect.html
@@ -3,6 +3,8 @@
     <link rel="stylesheet" type="text/css"
           th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
 
+    <link href="../static/css/bootstrap-social.css" th:href="@{/css/bootstrap-social.css}" rel="stylesheet" />
+
     <title>Spring Boot Facebook Application</title>
 </head>
 
@@ -18,6 +20,9 @@
 
                 <button class="btn btn-default" type="submit">Connect</button>
             </form>
+            <a class="btn btn-block btn-social btn-twitter">
+                <span class="fa fa-twitter"></span> Sign in with Twitter
+            </a>
         </div>
     </div>
 </div>
