--- a/src/main/resources/templates/connect/facebookConnect.html
+++ b/src/main/resources/templates/connect/facebookConnect.html
@@ -1,7 +1,7 @@
 <html xmlns:th="www.thymeleaf.org">
 <head>
     <link rel="stylesheet" type="text/css"
-          th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+          th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css}" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
@@ -12,15 +12,14 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12 text-center">
-            <h1 class="mt-5">Connect to Facebook:</h1>
-            <p class="lead">By clicking connect, you will be asked to authorize the application.</p>
+            <!--<h1 class="mt-5">Connect to Facebook:</h1>
+            <p class="lead">By clicking connect, you will be asked to authorize the application.</p>-->
 
             <form action="/connect/facebook" method="POST">
                 <input type="hidden" name="scope" value="user_posts"/>
 
 
-                <button class="btn btn-primary btn-lg" type="submit"><i class="fa fa-facebook-square"><span class="ml-2"> - Connect</span></i></button>
-                <!--<i class="fa fa-facebook-square"></i>-->
+                <button class="btn btn-primary btn-lg" type="submit"><i class="fa fa-facebook-square"><span class="ml-4">Connectez-vous à Facebook</span></i></button>
 
             </form>
 
