--- a/src/main/resources/templates/friends.html
+++ b/src/main/resources/templates/friends.html
@@ -2,11 +2,13 @@
 
 <head>
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css}" />
     <title>Spring Boot Facebook Application</title>
 </head>
-<body>
-<div class="container">
+
+<body id="background" style=" background-size: cover;  background-repeat: no-repeat; background-image: url('https://res.cloudinary.com/disggente/image/upload/v1576239407/cool-background_ewedqk.png');">
+
+<div style="color: white;" class="container">
 
     <!--<h3 class="mt-5">Welcome, <span th:text="${userProfile.name}"></span>!</h3>-->
 
@@ -18,6 +20,6 @@
         </div>
     </div>
 </div>
-</div>
+
 </body>
 </html>
