--- a/src/main/resources/templates/connect/facebookConnected.html
+++ b/src/main/resources/templates/connect/facebookConnected.html
@@ -2,23 +2,28 @@
 <head>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" type="text/css"
-          th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+          th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 
-
-    <title>Spring Boot Facebook Application</title>
+    <title>Facebook - Succès</title>
 </head>
 
-<body>
+
+<body id="background" style=" background-size: cover;  background-repeat: no-repeat; background-image: url('https://res.cloudinary.com/disggente/image/upload/v1576239407/cool-background_ewedqk.png');">
+
 <!-- Page Content -->
 <div class="container">
     <div class="row">
         <div class="col-lg-12 text-center">
-            <h1 class="mt-5 bg-success">Connected successfully!</h1>
-            <p class="lead">Welcome to facebook!</p>
+            <p></p>
+            <p></p>
 
-            <p>You can now browse your own feed <a href="/feed">here</a>.</p>
-            <p>You can also see your friend list <a href="/friends">here</a>.</p>
-            <span class="glyphicon glyphicon-cloud" aria-hidden="true"> Enter</span>
+            <h3 style="color: white;">Succès!</h3>
+            <p style="color: white;">Bienvenue sur Facebook!</p>
+            <span style="color: darkblue;"> <i class="fab fa-facebook-square fa-5x"></i></span>
+            <p style="color: white;"> Voir votre mur <a style="color: darkblue;" href="/feed"><strong>ici</strong></a>.</p>
+            <p style="color: white;">Voir votre liste d'amis <a style="color: darkblue;" href="/friends"><strong>ici</strong></a>.</p>
+
         </div>
     </div>
 </div>
