--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -2,24 +2,33 @@
 
 <head>
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
-    <title>Spring Boot Facebook Application</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+
+    <title style="color: darkblue;">Vos publications Facebook</title>
 </head>
-<body>
-<div class="container">
+
+<body id="background" style=" background-size: cover;  background-repeat: no-repeat; background-image: url('https://res.cloudinary.com/disggente/image/upload/v1576239407/cool-background_ewedqk.png');">
+
+
+<div style="color: white;" class="container">
 
     <!--<h3 class="mt-5">Welcome, <span th:text="${userProfile.name}"></span>!</h3>-->
 
-    <h4 class="mt-5">Facebook Feed:</h4>
-    <div class="row">
+    <h4 style="color: darkblue;" class="mt-5">Vos publications récentes:</h4>
+
+    <div style="color: black;" class="row">
         <div class="col-lg-12 text-center" th:each="post:${userFeed}" style="border:1px">
-            <b class="lead" th:text="${post.from.name}">from</b> posted:
-            <p class="lead" th:text="${post.message}">message text</p>
+            <b class="lead" th:text="${post.from.name}">from</b> a posté:
+            <p></p>
+            <h9 th:text="${post.message}">message text</h9>
+            <p> </p>
             <img th:if="${post.picture}" th:src="${post.picture}" class="img-thumbnail"/>
-            <hr>
+            <hr  style="border: 1px white solid;">
         </div>
     </div>
+
 </div>
-</div>
+
 </body>
 </html>
